--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/GhaidaaAhmed/fwd-image-processing-api#readme",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jasmine": "^3.10.2",
     "@types/node": "^17.0.4",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
