--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "sharp": "^0.29.3"
   }
 }
