--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/express": "^4.17.13",
     "@types/jasmine": "^3.10.2",
     "@types/node": "^17.0.4",
+    "@types/sharp": "^0.29.5",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
     "eslint": "^8.5.0",
