--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/jasmine": "^3.10.2",
     "@types/node": "^17.0.4",
     "@types/sharp": "^0.29.5",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
     "eslint": "^8.5.0",
