--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "npx tsc && jasmine",
     "build": "npx tsc",
     "start": "nodemon --watch './**/*.ts' --exec 'ts-node' ./src/index.ts",
-    "start:prod": "npm run build && node dist/index.js",
+    "start:prod": "npm run build && node dist/src/index.js",
     "lint": "eslint .",
     "lint:fix": "eslint --fix",
     "format": "prettier --write 'src/**/*.ts'"
